--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,17 @@ services:
       - sambaweb
     extra_hosts:
       - "host.docker.internal:host-gateway"
-
-
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./.nginx/default.conf:/etc/nginx/conf.d/default.conf:rw
+      - ./:/SambaWeb-Front
+    networks:
+      - sambaweb
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 networks:
   sambaweb:
     external: true
